--- a/arch/arm/configs/imxrt_defconfig
+++ b/arch/arm/configs/imxrt_defconfig
@@ -149,5 +149,7 @@ CONFIG_SCHED_STACK_END_CHECK=y
 CONFIG_SOFTLOCKUP_DETECTOR=y
 CONFIG_SCHEDSTATS=y
 CONFIG_STACKTRACE=y
+CONFIG_DEBUG_LL=y
+CONFIG_EARLY_PRINTK=y
 # CONFIG_RUNTIME_TESTING_MENU is not set
 CONFIG_MEMTEST=y
