--- a/arch/arm/configs/imxrt_defconfig
+++ b/arch/arm/configs/imxrt_defconfig
@@ -108,6 +108,7 @@ CONFIG_I2C=y
 # CONFIG_I2C_HELPER_AUTO is not set
 CONFIG_PINCTRL_IMXRT1050=y
 CONFIG_GPIO_SYSFS=y
+CONFIG_GPIO_MXC=y
 # CONFIG_HWMON is not set
 CONFIG_MFD_SYSCON=y
 CONFIG_MFD_WL1273_CORE=y
