--- a/arch/arm/boot/dts/imxrt1050.dtsi
+++ b/arch/arm/boot/dts/imxrt1050.dtsi
@@ -60,7 +60,7 @@
 		};
 
 		iomuxc: iomuxc@401f8000 {
-			compatible = "fsl,imxrt-iomuxc";
+			compatible = "fsl,imxrt1050-iomuxc";
 			reg = <0x401f8000 0x4000>;
 			fsl,mux_mask = <0x7>;
 		};
