--- a/arch/arm/configs/imxrt_defconfig
+++ b/arch/arm/configs/imxrt_defconfig
@@ -1,5 +1,4 @@
 # CONFIG_LOCALVERSION_AUTO is not set
-CONFIG_DEBUG_KERNEL=Y 
 CONFIG_SYSVIPC=y
 CONFIG_USELIB=y
 CONFIG_NO_HZ=y
@@ -117,14 +116,16 @@ CONFIG_MFD_WL1273_CORE=y
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 # CONFIG_HID is not set
 # CONFIG_USB_SUPPORT is not set
+CONFIG_MMC=y
+CONFIG_MMC_SDHCI=y
+CONFIG_DMADEVICES=y
+CONFIG_FSL_EDMA=y
+# CONFIG_MX3_IPU is not set
 # CONFIG_VIRTIO_MENU is not set
 CONFIG_MEMORY=y
 CONFIG_IMXRT_SDRAM=y
 # CONFIG_IMX_IRQSTEER is not set
 # CONFIG_ARM_PMU is not set
-CONFIG_MMC=y
-CONFIG_MMC_SDHCI=y
-CONFIG_MMC_SDHCI_ESDHC_IMX=y
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
